tests/netgen/grid/errors/grid_x_length__9_9/options.netgen
--grid --grid.number=10 --grid.x-length=9.9 --output=net.net.xml
